project('edward', 'cpp', default_options : ['cpp_std=c++14', 'warning_level=1'])
add_project_arguments('-O2', '-g', '-Wno-unused', '-Wstrict-aliasing=0', '-fno-omit-frame-pointer', language : ['cpp'])

#install_data
#meson.add_install_script('')
#install_subdir

cc = meson.get_compiler('cpp')

# mandatory dependencies
mdep = cc.find_library('m', required : false)
threaddep = dependency('threads')
gtk3dep = dependency('gtk+-3.0')
add_project_arguments('-DHAS_LIB_GTK3=1', language : ['cpp'])
zlibdep = dependency('zlib')
add_project_arguments('-DHAS_LIB_ZLIB=1', language : ['cpp'])
gldep = dependency('GL')
add_project_arguments('-DHAS_LIB_GL=1', language : ['cpp'])
deps = [mdep, threaddep, gtk3dep, zlibdep, gldep]

# optional dependency: unwind
d = cc.find_library('unwind', required : false)
if d.found()
	add_project_arguments('-DHAS_LIB_UNWIND=1', language : ['cpp'])
	deps += [d]
else
	add_project_arguments('-DHAS_LIB_UNWIND=0', language : ['cpp'])
endif

# optional dependency: dl
d = cc.find_library('dl', required : false)
if d.found()
	add_project_arguments('-DHAS_LIB_DL=1', language : ['cpp'])
	deps += [d]
else
	add_project_arguments('-DHAS_LIB_DL=0', language : ['cpp'])
endif


sources = [
	'src/Action/Font/ActionFontEditGlobal.cpp',
	'src/Action/Font/ActionFontEditGlyph.cpp',
	'src/Action/Material/ActionMaterialEditAppearance.cpp',
	'src/Action/Material/ActionMaterialEditPhysics.cpp',
	'src/Action/Model/Animation/ActionModelAddAnimation.cpp',
	'src/Action/Model/Animation/ActionModelAnimationAddFrame.cpp',
	'src/Action/Model/Animation/ActionModelAnimationDeleteFrame.cpp',
	'src/Action/Model/Animation/ActionModelAnimationSetBone.cpp',
	'src/Action/Model/Animation/ActionModelAnimationSetData.cpp',
	'src/Action/Model/Animation/ActionModelAnimationSetFrameDuration.cpp',
	'src/Action/Model/Animation/ActionModelAnimationTransformBones.cpp',
	'src/Action/Model/Animation/ActionModelAnimationTransformVertices.cpp',
	'src/Action/Model/Animation/ActionModelDeleteAnimation.cpp',
	'src/Action/Model/Animation/ActionModelDuplicateAnimation.cpp',
	'src/Action/Model/Data/ActionModelAddMaterial.cpp',
	'src/Action/Model/Data/ActionModelEditData.cpp',
	'src/Action/Model/Data/ActionModelEditMaterial.cpp',
	'src/Action/Model/Mesh/Brush/ActionModelBrushComplexify.cpp',
	'src/Action/Model/Mesh/Brush/ActionModelBrushExtrude.cpp',
	'src/Action/Model/Mesh/Brush/ActionModelBrushSmooth.cpp',
	'src/Action/Model/Mesh/Edge/ActionModelBevelEdges.cpp',
	'src/Action/Model/Mesh/Edge/ActionModelCollapseEdge.cpp',
	'src/Action/Model/Mesh/Edge/ActionModelSplitEdge.cpp',
	'src/Action/Model/Mesh/Effects/ActionModelAddEffects.cpp',
	'src/Action/Model/Mesh/Effects/ActionModelClearEffects.cpp',
	'src/Action/Model/Mesh/Effects/ActionModelEditEffect.cpp',
	'src/Action/Model/Mesh/Look/ActionModelSetMaterial.cpp',
	'src/Action/Model/Mesh/Look/ActionModelSetNormalModeSelection.cpp',
	'src/Action/Model/Mesh/Polygon/Helper/ActionModelPolygonAddVertex.cpp',
	'src/Action/Model/Mesh/Polygon/Helper/ActionModelPolygonRemoveVertex.cpp',
	'src/Action/Model/Mesh/Polygon/ActionModelAddPolygon.cpp',
	'src/Action/Model/Mesh/Polygon/ActionModelAddPolygonAutoSkin.cpp',
	'src/Action/Model/Mesh/Polygon/ActionModelAddPolygonSingleTexture.cpp',
	'src/Action/Model/Mesh/Polygon/ActionModelAddPolygonWithSkinGenerator.cpp',
	'src/Action/Model/Mesh/Polygon/ActionModelCutOutPolygons.cpp',
	'src/Action/Model/Mesh/Polygon/ActionModelExtrudePolygons.cpp',
	'src/Action/Model/Mesh/Polygon/ActionModelMergePolygonsSelection.cpp',
	'src/Action/Model/Mesh/Polygon/ActionModelSplitPolygon.cpp',
	'src/Action/Model/Mesh/Polygon/ActionModelTriangulateSelection.cpp',
	'src/Action/Model/Mesh/Skin/ActionModelAutomap.cpp',
	'src/Action/Model/Mesh/Skin/ActionModelSkinVerticesFromProjection.cpp',
	'src/Action/Model/Mesh/Skin/ActionModelTransformSkinVertices.cpp',
	'src/Action/Model/Mesh/Surface/Helper/ActionModelAddEmptySurface.cpp',
	'src/Action/Model/Mesh/Surface/Helper/ActionModelDeleteEmptySurface.cpp',
	'src/Action/Model/Mesh/Surface/Helper/ActionModelJoinSurfaces.cpp',
	'src/Action/Model/Mesh/Surface/Helper/ActionModelSurfaceAddPolygon.cpp',
	'src/Action/Model/Mesh/Surface/Helper/ActionModelSurfaceDeletePolygon.cpp',
	'src/Action/Model/Mesh/Surface/Helper/ActionModelSurfaceRelinkPolygon.cpp',
	'src/Action/Model/Mesh/Surface/ActionModelAutoWeldSelection.cpp',
	'src/Action/Model/Mesh/Surface/ActionModelDeleteSurface.cpp',
	'src/Action/Model/Mesh/Surface/ActionModelSurfaceAutoWeld.cpp',
	'src/Action/Model/Mesh/Surface/ActionModelSurfaceCopy.cpp',
	'src/Action/Model/Mesh/Surface/ActionModelSurfaceInvert.cpp',
	'src/Action/Model/Mesh/Surface/ActionModelSurfacesSubdivide.cpp',
	'src/Action/Model/Mesh/Surface/ActionModelSurfaceVolumeAnd.cpp',
	'src/Action/Model/Mesh/Surface/ActionModelSurfaceVolumeSubtract.cpp',
	'src/Action/Model/Mesh/Vertex/Helper/ActionModelDeleteUnusedVertex.cpp',
	'src/Action/Model/Mesh/Vertex/Helper/ActionModelMoveVertex.cpp',
	'src/Action/Model/Mesh/Vertex/ActionModelAddVertex.cpp',
	'src/Action/Model/Mesh/Vertex/ActionModelAlignToGrid.cpp',
	'src/Action/Model/Mesh/Vertex/ActionModelBevelVertices.cpp',
	'src/Action/Model/Mesh/Vertex/ActionModelCollapseVertices.cpp',
	'src/Action/Model/Mesh/Vertex/ActionModelDeleteVertex.cpp',
	'src/Action/Model/Mesh/Vertex/ActionModelFlattenVertices.cpp',
	'src/Action/Model/Mesh/Vertex/ActionModelNearifyVertices.cpp',
	'src/Action/Model/Mesh/Vertex/ActionModelTransformVertices.cpp',
	'src/Action/Model/Mesh/Vertex/ActionModelTriangulateVertices.cpp',
	'src/Action/Model/Mesh/ActionModelDeleteSelection.cpp',
	'src/Action/Model/Mesh/ActionModelEasify.cpp',
	'src/Action/Model/Mesh/ActionModelPasteGeometry.cpp',
	'src/Action/Model/Skeleton/ActionModelAddBone.cpp',
	'src/Action/Model/Skeleton/ActionModelAttachVerticesToBone.cpp',
	'src/Action/Model/Skeleton/ActionModelDeleteBone.cpp',
	'src/Action/Model/Skeleton/ActionModelDeleteBoneSelection.cpp',
	'src/Action/Model/Skeleton/ActionModelReconnectBone.cpp',
	'src/Action/Model/Skeleton/ActionModelSetSubModel.cpp',
	'src/Action/Model/Skeleton/ActionModelTransformBones.cpp',
	'src/Action/World/Camera/ActionCameraAddPoint.cpp',
	'src/Action/World/Camera/ActionCameraMoveSelection.cpp',
	'src/Action/World/Camera/ActionCameraMoveTimeSelection.cpp',
	'src/Action/World/Helper/ActionWorldTerrainEditHeight.cpp',
	'src/Action/World/Object/ActionWorldAddObject.cpp',
	'src/Action/World/Object/ActionWorldDeleteObject.cpp',
	'src/Action/World/Object/ActionWorldEditObject.cpp',
	'src/Action/World/Object/ActionWorldRotateObjects.cpp',
	'src/Action/World/Terrain/ActionWorldAddTerrain.cpp',
	'src/Action/World/Terrain/ActionWorldDeleteTerrain.cpp',
	'src/Action/World/Terrain/ActionWorldEditTerrain.cpp',
	'src/Action/World/Terrain/ActionWorldTerrainApplyHeightmap.cpp',
	'src/Action/World/Terrain/ActionWorldTerrainBrushExtrude.cpp',
	'src/Action/World/ActionWorldDeleteSelection.cpp',
	'src/Action/World/ActionWorldEditData.cpp',
	'src/Action/World/ActionWorldMoveSelection.cpp',
	'src/Action/World/ActionWorldPaste.cpp',
	'src/Action/World/ActionWorldSetEgo.cpp',
	'src/Action/Action.cpp',
	'src/Action/ActionGroup.cpp',
	'src/Action/ActionManager.cpp',
	'src/Action/ActionMultiView.cpp',
	'src/Data/Administration/AdminFile.cpp',
	'src/Data/Administration/AdminFileList.cpp',
	'src/Data/Administration/DataAdministration.cpp',
	'src/Data/Administration/GameIniData.cpp',
	'src/Data/Font/Import/ImporterCairo.cpp',
	'src/Data/Font/DataFont.cpp',
	'src/Data/Material/DataMaterial.cpp',
	'src/Data/Model/Export/ExporterJson.cpp',
	'src/Data/Model/Geometry/Geometry.cpp',
	'src/Data/Model/Geometry/GeometryBall.cpp',
	'src/Data/Model/Geometry/GeometryCube.cpp',
	'src/Data/Model/Geometry/GeometryCylinder.cpp',
	'src/Data/Model/Geometry/GeometryPlane.cpp',
	'src/Data/Model/Geometry/GeometryPlatonic.cpp',
	'src/Data/Model/Geometry/GeometrySphere.cpp',
	'src/Data/Model/Geometry/GeometrySubtract.cpp',
	'src/Data/Model/Geometry/GeometryTeapot.cpp',
	'src/Data/Model/Geometry/GeometryTorus.cpp',
	'src/Data/Model/Geometry/GeometryTorusKnot.cpp',
	'src/Data/Model/Import/Importer3ds.cpp',
	'src/Data/Model/Import/ImporterJson.cpp',
	'src/Data/Model/Import/ImporterPly.cpp',
	'src/Data/Model/BspTree.cpp',
	'src/Data/Model/DataModel.cpp',
	'src/Data/Model/ModelMaterial.cpp',
	'src/Data/Model/ModelPolygon.cpp',
	'src/Data/Model/ModelSurface.cpp',
	'src/Data/Model/SkinGenerator.cpp',
	'src/Data/World/Lightmap/Lightmap.cpp',
	'src/Data/World/Lightmap/LightmapData.cpp',
	'src/Data/World/Lightmap/LightmapPhotonMap.cpp',
	'src/Data/World/Lightmap/LightmapPhotonMapImageSpace.cpp',
	'src/Data/World/Lightmap/LightmapRadiosity.cpp',
	'src/Data/World/Lightmap/LightmapRayTracing.cpp',
	'src/Data/World/DataCamera.cpp',
	'src/Data/World/DataWorld.cpp',
	'src/Data/Data.cpp',
	'src/lib/any/any.cpp',
	'src/lib/base/array.cpp',
	'src/lib/base/strings.cpp',
	'src/lib/file/file.cpp',
	'src/lib/file/file_op.cpp',
	'src/lib/file/msg.cpp',
	'src/lib/hui/Controls/Control.cpp',
	'src/lib/hui/Controls/ControlButtonGtk.cpp',
	'src/lib/hui/Controls/ControlCheckBoxGtk.cpp',
	'src/lib/hui/Controls/ControlColorButtonGtk.cpp',
	'src/lib/hui/Controls/ControlComboBoxGtk.cpp',
	'src/lib/hui/Controls/ControlDrawingAreaGtk.cpp',
	'src/lib/hui/Controls/ControlEditGtk.cpp',
	'src/lib/hui/Controls/ControlExpanderGtk.cpp',
	'src/lib/hui/Controls/ControlGridGtk.cpp',
	'src/lib/hui/Controls/ControlGroupGtk.cpp',
	'src/lib/hui/Controls/ControlLabelGtk.cpp',
	'src/lib/hui/Controls/ControlListViewGtk.cpp',
	'src/lib/hui/Controls/ControlMenuButtonGtk.cpp',
	'src/lib/hui/Controls/ControlMultilineEditGtk.cpp',
	'src/lib/hui/Controls/ControlPanedGtk.cpp',
	'src/lib/hui/Controls/ControlProgressBarGtk.cpp',
	'src/lib/hui/Controls/ControlRadioButtonGtk.cpp',
	'src/lib/hui/Controls/ControlRevealerGtk.cpp',
	'src/lib/hui/Controls/ControlScrollerGtk.cpp',
	'src/lib/hui/Controls/ControlSeparatorGtk.cpp',
	'src/lib/hui/Controls/ControlSliderGtk.cpp',
	'src/lib/hui/Controls/ControlSpinButtonGtk.cpp',
	'src/lib/hui/Controls/ControlTabControlGtk.cpp',
	'src/lib/hui/Controls/ControlToggleButtonGtk.cpp',
	'src/lib/hui/Controls/ControlTreeViewGtk.cpp',
	'src/lib/hui/Controls/MenuItemGtk.cpp',
	'src/lib/hui/Controls/MenuItemSeparatorGtk.cpp',
	'src/lib/hui/Controls/MenuItemSeparatorWin.cpp',
	'src/lib/hui/Controls/MenuItemSubmenuGtk.cpp',
	'src/lib/hui/Controls/MenuItemSubmenuWin.cpp',
	'src/lib/hui/Controls/MenuItemToggleGtk.cpp',
	'src/lib/hui/Controls/MenuItemToggleWin.cpp',
	'src/lib/hui/Controls/MenuItemWin.cpp',
	'src/lib/hui/Controls/ToolItemButtonGtk.cpp',
	'src/lib/hui/Controls/ToolItemButtonWin.cpp',
	'src/lib/hui/Controls/ToolItemMenuButtonGtk.cpp',
	'src/lib/hui/Controls/ToolItemMenuButtonWin.cpp',
	'src/lib/hui/Controls/ToolItemSeparatorGtk.cpp',
	'src/lib/hui/Controls/ToolItemSeparatorWin.cpp',
	'src/lib/hui/Controls/ToolItemToggleButtonGtk.cpp',
	'src/lib/hui/Controls/ToolItemToggleButtonWin.cpp',
	'src/lib/hui/Application.cpp',
	'src/lib/hui/Callback.cpp',
	'src/lib/hui/Clipboard.cpp',
	'src/lib/hui/common_dlg.cpp',
	'src/lib/hui/common_dlg_gtk.cpp',
	'src/lib/hui/common_dlg_win.cpp',
	'src/lib/hui/Config.cpp',
	'src/lib/hui/error.cpp',
	'src/lib/hui/Event.cpp',
	'src/lib/hui/hui.cpp',
	'src/lib/hui/language.cpp',
	'src/lib/hui/main_gtk.cpp',
	'src/lib/hui/main_win.cpp',
	'src/lib/hui/Menu.cpp',
	'src/lib/hui/MenuGtk.cpp',
	'src/lib/hui/MenuWin.cpp',
	'src/lib/hui/PainterGtk.cpp',
	'src/lib/hui/Panel.cpp',
	'src/lib/hui/Resource.cpp',
	'src/lib/hui/Timer.cpp',
	'src/lib/hui/Toolbar.cpp',
	'src/lib/hui/ToolbarGtk.cpp',
	'src/lib/hui/ToolbarWin.cpp',
	'src/lib/hui/utility.cpp',
	'src/lib/hui/Window.cpp',
	'src/lib/hui/window_control.cpp',
	'src/lib/hui/window_control_gtk.cpp',
	'src/lib/hui/window_control_win.cpp',
	'src/lib/hui/WindowGtk.cpp',
	'src/lib/hui/WindowWin.cpp',
	'src/lib/image/color.cpp',
	'src/lib/image/image.cpp',
	'src/lib/image/image_bmp.cpp',
	'src/lib/image/image_jpg.cpp',
	'src/lib/image/image_png.cpp',
	'src/lib/image/image_tga.cpp',
	'src/lib/image/ImagePainter.cpp',
	'src/lib/kaba/asm/asm.cpp',
	'src/lib/kaba/asm/asm_arm.cpp',
	'src/lib/kaba/asm/asm_x86.cpp',
	'src/lib/kaba/compiler/compiler.cpp',
	'src/lib/kaba/compiler/mapper.cpp',
	'src/lib/kaba/compiler/serializer.cpp',
	'src/lib/kaba/compiler/serializer_amd64.cpp',
	'src/lib/kaba/compiler/serializer_arm.cpp',
	'src/lib/kaba/compiler/serializer_x86.cpp',
	'src/lib/kaba/lib/dict.cpp',
	'src/lib/kaba/lib/dynamic.cpp',
	'src/lib/kaba/lib/exception.cpp',
	'src/lib/kaba/lib/lib.cpp',
	'src/lib/kaba/lib/lib_base.cpp',
	'src/lib/kaba/lib/lib_file.cpp',
	'src/lib/kaba/lib/lib_hui.cpp',
	'src/lib/kaba/lib/lib_image.cpp',
	'src/lib/kaba/lib/lib_kaba.cpp',
	'src/lib/kaba/lib/lib_math.cpp',
	'src/lib/kaba/lib/lib_net.cpp',
	'src/lib/kaba/lib/lib_nix.cpp',
	'src/lib/kaba/lib/lib_sound.cpp',
	'src/lib/kaba/lib/lib_threads.cpp',
	'src/lib/kaba/lib/lib_vulkan.cpp',
	'src/lib/kaba/lib/lib_x.cpp',
	'src/lib/kaba/syntax/Class.cpp',
	'src/lib/kaba/syntax/Constant.cpp',
	'src/lib/kaba/syntax/Function.cpp',
	'src/lib/kaba/syntax/implicit.cpp',
	'src/lib/kaba/syntax/lexical.cpp',
	'src/lib/kaba/syntax/Node.cpp',
	'src/lib/kaba/syntax/parser.cpp',
	'src/lib/kaba/syntax/Parser.cpp',
	'src/lib/kaba/syntax/precompiler.cpp',
	'src/lib/kaba/syntax/preprocessor.cpp',
	'src/lib/kaba/syntax/SyntaxTree.cpp',
	'src/lib/kaba/kaba.cpp',
	'src/lib/math/complex.cpp',
	'src/lib/math/interpolation.cpp',
	'src/lib/math/math.cpp',
	'src/lib/math/matrix.cpp',
	'src/lib/math/matrix3.cpp',
	'src/lib/math/plane.cpp',
	'src/lib/math/quaternion.cpp',
	'src/lib/math/random.cpp',
	'src/lib/math/ray.cpp',
	'src/lib/math/rect.cpp',
	'src/lib/math/vector.cpp',
	'src/lib/net/net.cpp',
	'src/lib/nix/nix.cpp',
	'src/lib/nix/nix_draw.cpp',
	'src/lib/nix/nix_light.cpp',
	'src/lib/nix/nix_shader.cpp',
	'src/lib/nix/nix_textures.cpp',
	'src/lib/nix/nix_vertexbuffer.cpp',
	'src/lib/nix/nix_view.cpp',
	'src/lib/threads/Mutex.cpp',
	'src/lib/threads/Thread.cpp',
	'src/lib/threads/ThreadedWork.cpp',
	'src/Mode/Administration/Dialog/AdministrationDialog.cpp',
	'src/Mode/Administration/Dialog/ConfigurationDialog.cpp',
	'src/Mode/Administration/ModeAdministration.cpp',
	'src/Mode/Font/Dialog/FontDialog.cpp',
	'src/Mode/Font/ModeFont.cpp',
	'src/Mode/Material/Dialog/MaterialPropertiesDialog.cpp',
	'src/Mode/Material/ModeMaterial.cpp',
	'src/Mode/Model/Animation/Creation/ModeModelAnimationInterpolateFrames.cpp',
	'src/Mode/Model/Animation/ModeModelAnimation.cpp',
	'src/Mode/Model/Animation/ModeModelAnimationNone.cpp',
	'src/Mode/Model/Animation/ModeModelAnimationSkeleton.cpp',
	'src/Mode/Model/Animation/ModeModelAnimationVertex.cpp',
	'src/Mode/Model/Dialog/ModelAnimationDialog.cpp',
	'src/Mode/Model/Dialog/ModelAnimationTimelinePanel.cpp',
	'src/Mode/Model/Dialog/ModelDuplicateAnimationDialog.cpp',
	'src/Mode/Model/Dialog/ModelEasifyDialog.cpp',
	'src/Mode/Model/Dialog/ModelFXDialog.cpp',
	'src/Mode/Model/Dialog/ModelMaterialDialog.cpp',
	'src/Mode/Model/Dialog/ModelMaterialSelectionDialog.cpp',
	'src/Mode/Model/Dialog/ModelNewAnimationDialog.cpp',
	'src/Mode/Model/Dialog/ModelPropertiesDialog.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshAutoweld.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshBevelEdges.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshCreateBall.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshCreateCube.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshCreateCylinder.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshCreateCylinderSnake.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshCreatePlane.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshCreatePlatonic.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshCreatePolygon.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshCreateTorus.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshCreateVertex.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshDeformCylinder.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshDeformFunction.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshExtrudePolygons.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshPaste.cpp',
	'src/Mode/Model/Mesh/Creation/ModeModelMeshSplitPolygon.cpp',
	'src/Mode/Model/Mesh/Selection/MeshSelectionMode.cpp',
	'src/Mode/Model/Mesh/Selection/MeshSelectionModeEdge.cpp',
	'src/Mode/Model/Mesh/Selection/MeshSelectionModePolygon.cpp',
	'src/Mode/Model/Mesh/Selection/MeshSelectionModeSurface.cpp',
	'src/Mode/Model/Mesh/Selection/MeshSelectionModeVertex.cpp',
	'src/Mode/Model/Mesh/ModeModelMesh.cpp',
	'src/Mode/Model/Mesh/ModeModelMeshDeform.cpp',
	'src/Mode/Model/Mesh/ModeModelMeshMaterial.cpp',
	'src/Mode/Model/Mesh/ModeModelMeshPaint.cpp',
	'src/Mode/Model/Mesh/ModeModelMeshTexture.cpp',
	'src/Mode/Model/Skeleton/Creation/ModeModelSkeletonAttachVertices.cpp',
	'src/Mode/Model/Skeleton/Creation/ModeModelSkeletonCreateBone.cpp',
	'src/Mode/Model/Skeleton/ModeModelSkeleton.cpp',
	'src/Mode/Model/ModeModel.cpp',
	'src/Mode/World/Camera/Creation/ModeWorldCameraCreatePoint.cpp',
	'src/Mode/World/Camera/ModeWorldCamera.cpp',
	'src/Mode/World/Creation/ModeWorldCreateObject.cpp',
	'src/Mode/World/Creation/ModeWorldCreateTerrain.cpp',
	'src/Mode/World/Dialog/CameraDialog.cpp',
	'src/Mode/World/Dialog/LightmapDialog.cpp',
	'src/Mode/World/Dialog/ObjectPropertiesDialog.cpp',
	'src/Mode/World/Dialog/ScriptVarsDialog.cpp',
	'src/Mode/World/Dialog/SelectionPropertiesDialog.cpp',
	'src/Mode/World/Dialog/TerrainCreationDialog.cpp',
	'src/Mode/World/Dialog/TerrainHeightmapDialog.cpp',
	'src/Mode/World/Dialog/TerrainPropertiesDialog.cpp',
	'src/Mode/World/Dialog/WorldPropertiesDialog.cpp',
	'src/Mode/World/Terrain/ModeWorldTerrain.cpp',
	'src/Mode/World/ModeWorld.cpp',
	'src/Mode/Mode.cpp',
	'src/Mode/ModeCreation.cpp',
	'src/Mode/ModeNone.cpp',
	'src/MultiView/ActionController.cpp',
	'src/MultiView/CameraController.cpp',
	'src/MultiView/ColorScheme.cpp',
	'src/MultiView/DrawingHelper.cpp',
	'src/MultiView/MultiView.cpp',
	'src/MultiView/SingleData.cpp',
	'src/MultiView/Window.cpp',
	'src/Stuff/Observable.cpp',
	'src/Stuff/Observer.cpp',
	'src/Stuff/PluginManager.cpp',
	'src/Stuff/Progress.cpp',
	'src/x/camera.cpp',
	'src/x/font.cpp',
	'src/x/material.cpp',
	'src/x/model.cpp',
	'src/x/model_manager.cpp',
	'src/x/object.cpp',
	'src/x/terrain.cpp',
	'src/x/world.cpp',
	'src/Edward.cpp',
	'src/main.cpp',
	'src/meta.cpp'
]


executable('edward', sources, dependencies : deps, install : true)

install_subdir('static/icons', install_dir : join_paths(get_option('datadir'), 'edward'))
install_subdir('static/shader', install_dir : join_paths(get_option('datadir'), 'edward'))
install_data('static/edward.jpg', install_dir : join_paths(get_option('datadir'), 'edward'))
install_data('static/hui_resources.txt', install_dir : join_paths(get_option('datadir'), 'edward'))
install_data('static/icon.svg', install_dir : join_paths(get_option('datadir'), 'edward'))
install_data('static/license.txt', install_dir : join_paths(get_option('datadir'), 'edward'))
install_data('static/license_small.txt', install_dir : join_paths(get_option('datadir'), 'edward'))
install_subdir('Plugins', install_dir : join_paths(get_option('datadir'), 'edward'))
install_data('static/michisoft-edward.desktop', install_dir : join_paths(get_option('datadir'), 'applications'))
